# rss-reader

./: .gitignore  LICENSE  biome.json  flake.nix  index.html  package.json  vite.config.ts
src/: App.tsx  global.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
